apps/homeassistant/src/k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    app.kubernetes.io/name: homeassistant
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: homeassistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homeassistant
    spec:
      strategy:
        type: Recreate
      containers:
        - name: home-assistant
          # https://github.com/home-assistant/core/pkgs/container/home-assistant/versions
          image: ghcr.io/home-assistant/home-assistant:2026.2.1
          ports:
            - name: http
              containerPort: 8123
              protocol: TCP
          volumeMounts:
            - mountPath: /config/
              name: homeassistant-data
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      volumes:
        - name: homeassistant-data
          persistentVolumeClaim:
            claimName: homeassistant-data

---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  selector:
    app.kubernetes.io/name: homeassistant
  ports:
    - name: http
      port: 8123
      protocol: TCP
