apps/homeassistant/src/k8s/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https
  namespace: homeassistant
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`homeassistant.makerspace.org.uk`)
      services:
        - Kind: Service
          name: homeassistant
          port: http
  tls:
    secretName: tls-cert
